[tool.poetry]
name = "rki-covid-parser"
version = "1.3.0"
description = ""
authors = ["Stürmer, Benjamin <webmaster@stuermer-benjamin.de>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.0.0"

[build-system]
requires = [
    "setuptools >= 42",
    "wheel >= 0.29.0"
]
build-backend = "setuptools.build_meta"
