[metadata]
name = rki-covid-parser
version = 0.0.3
author = Stürmer, Benjamin
author_email = webmaster@stuermer-benjamin.de
description = A simple rki covid numbers parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thebino/rki-covid-parser
project_urls =
    Bug Tracker = https://github.com/thebino/rki-covid-parser/issues
classifiers =
    License :: OSI Approved :: Apache Software License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
