[metadata]
name = rki-covid-parser
version = 1.2.2
author = Stürmer, Benjamin
author_email = webmaster@stuermer-benjamin.de
description = A simple rki covid numbers parser
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
license_file = LICENSE
keywords = covid, rki
url = https://github.com/thebino/rki-covid-parser
project_urls =
    Bug Tracker = https://github.com/thebino/rki-covid-parser/issues
    Changelog = https://github.com/thebino/rki-covid-parser/blob/master/CHANGELOG.md
classifiers =
    License :: OSI Approved :: Apache Software License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Typing :: Typed

[options]
zip_safe = False
packages = find:
platform = any
include_package_data = True
python_requires = >=3.6, != 2.*
test_suite = tests
setup_requires =
    setuptools >=46.4
install_requires = 
    aiohttp>=3.5.2
tests_require = 
    pytest-aiohttp

[options.packages.find]
exclude = *.tests

[bdist_wheel]
universal = 1

[sdist]
formats = zip

[aliases]
test=pytest

[options.extras_require]
test =
    pytest >= 6.2.2
    pytest-asyncio
    pytest-aiohttp
    pytest-cov
all =
    %(test)s
